Firefox flicker fixed when two translates aren't colliding.

--- a/App.module.css
+++ b/App.module.css
@@ -2,36 +2,49 @@
   position: fixed;
   width: 100%;
   height: 100%;
-  /* transform: scale(2, 2); */
+  transform: scale(2, 2);
   /* border: 1px dashed red; */
 }
 .Camera {
   position: fixed;
   width: 100%;
   height: 100%;
-  border: 1px dashed red;
+  /* border: 1px dashed red; */
 }
 .Map {
   position: relative;
   width: 100%;
   height: 100%;
   overflow: hidden;
-  transition: transform 0.75s ease-out;
-  border: 1px dashed blue;
+  
+  transition:
+    transform 0.75s ease-out,
+    left 0.75s ease-out,
+    top 0.75s ease-out;
+
+  will-change: transform;
+
+  /* border: 1px dashed blue; */
 }
 .Char {
   position: absolute;
   font-size: 32px;
-  /* transition: left 0.5s, top 0.5s; */
-  transition: transform 0.375s linear;
+  
+  transition:
+    transform 0.375s linear,
+    left 0.375s linear,
+    top 0.375s linear;
+    
+  will-change: transform;
 }
 .Tile {
   position: absolute;
   width: 32px;
   height: 32px;
-  image-rendering: pixelated;
+  image-rendering: pixelated; /* Chrome */
+  image-rendering: crisp-edges; /* Firefox */
   overflow: hidden;
-  border: 1px dashed red;
+  /* border: 1px dashed red; */
 }
 .Tile img {
   position: relative;
